--- a/app/src/main/res/layout/fragment_favourite_joke_item.xml
+++ b/app/src/main/res/layout/fragment_favourite_joke_item.xml
@@ -1,22 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="vertical"
+    android:layout_marginBottom="8dp"
+    android:layout_marginTop="10dp"
+    >
 
     <TextView
-        android:id="@+id/item_number"
-        android:layout_width="wrap_content"
+        android:id="@+id/jokeTitle"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="1"
+        android:text="Title"
+        app:layout_constraintEnd_toStartOf="@id/ic_favourite_img"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         android:textAppearance="?attr/textAppearanceListItem" />
 
     <TextView
-        android:id="@+id/content"
-        android:layout_width="wrap_content"
+        android:id="@+id/jokeDesc"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="Joke"
+        android:text="Description"
+        app:layout_constraintEnd_toStartOf="@id/ic_favourite_img"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/jokeTitle"
         android:textAppearance="?attr/textAppearanceListItem" />
-</LinearLayout>
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/lineSeparator1"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/horizontal_dotted_line"
+        app:layout_constraintTop_toBottomOf="@id/jokeDesc" />
+
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ic_favourite_img"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/ic_favourite_selected" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
