--- a/app/src/main/res/layout/fragment_favourite_joke_list.xml
+++ b/app/src/main/res/layout/fragment_favourite_joke_list.xml
@@ -6,6 +6,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/topAppBarFragmentFavouriteJokes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/favouriteJokeToolbar"
+            style="@style/Theme.ToolBar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"
+            app:title="Favourite Jokes"
+            app:titleTextColor="@color/black">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/searchForJoke"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_search"
+                android:layout_gravity="end"
+                android:layout_marginEnd="10dp"
+                />
+        </com.google.android.material.appbar.MaterialToolbar>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+
     <androidx.core.widget.ContentLoadingProgressBar
         android:id="@+id/favouriteJokesProgress"
         style="?android:attr/progressBarStyleHorizontal"
@@ -23,11 +53,13 @@
         android:id="@+id/savedJokeRecyclerView"
         android:name="com.scania.test.FavouriteJokesFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         app:layoutManager="LinearLayoutManager"
         android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/topAppBarFragmentFavouriteJokes"
         tools:context=".presentation.FavouriteJokesFragment"
         tools:listitem="@layout/fragment_favourite_joke_item" />
 
