--- a/app/src/main/res/layout/fragment_joke_search.xml
+++ b/app/src/main/res/layout/fragment_joke_search.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,7 +8,7 @@
     tools:context=".presentation.JokeSearchFragment">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/topAppBarFragmentHome"
+        android:id="@+id/topAppBarFragmentSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -15,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/goBackMyTrip"
+            android:id="@+id/navigateBackSearchToolbar"
             style="@style/Theme.ToolBar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -26,6 +27,248 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/categoryLabel"
+        android:text="Category"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintTop_toBottomOf="@id/topAppBarFragmentSearch"
+        />
+    <RadioGroup
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/radioGroup"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/categoryLabel"
+        android:orientation="horizontal"
+        android:layout_marginStart="10dp">
 
 
-</FrameLayout>
+    <com.google.android.material.radiobutton.MaterialRadioButton
+        android:id="@+id/categoryAny"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/categoryLabel"
+        android:text="Any"/>
+
+    <com.google.android.material.radiobutton.MaterialRadioButton
+        android:id="@+id/categoryCustom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/categoryAny"
+        app:layout_constraintTop_toBottomOf="@id/categoryLabel"
+        android:text="Custom" />
+
+    </RadioGroup>
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/programmingCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/radioGroup"
+        android:layout_marginStart="10dp"
+        android:text="Programming"
+        />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/miscCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/programmingCheckbox"
+        app:layout_constraintTop_toBottomOf="@id/radioGroup"
+        android:text="Misc"
+        />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/darkCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/miscCheckbox"
+        app:layout_constraintTop_toBottomOf="@id/radioGroup"
+        android:text="Dark"
+        />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/punCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/darkCheckbox"
+        app:layout_constraintTop_toBottomOf="@id/radioGroup"
+        android:text="Pun"
+        />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/spookyCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/punCheckbox"
+        app:layout_constraintTop_toBottomOf="@id/radioGroup"
+        android:text="Spooky"
+        />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/christmasCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/programmingCheckbox"
+        android:layout_marginStart="10dp"
+        android:text="Christmas"
+        />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/lineSeparator1"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@drawable/horizontal_dotted_line"
+        app:layout_constraintTop_toBottomOf="@id/christmasCheckbox" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/languageLabel"
+        android:text="Select language"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintTop_toBottomOf="@id/lineSeparator1"
+        />
+
+    <androidx.appcompat.widget.AppCompatSpinner
+        android:id="@+id/languageOptionsSpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        app:layout_constraintStart_toEndOf="@id/languageLabel"
+        app:layout_constraintTop_toTopOf="@id/languageLabel"
+        android:entries="@array/language_option"
+        />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/lineSeparator2"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@drawable/horizontal_dotted_line"
+        app:layout_constraintTop_toBottomOf="@id/languageLabel"
+        android:layout_marginTop="10dp"
+
+        />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/flagLabel"
+        android:text="Select Flags"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/lineSeparator2"
+        />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/nsfwCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/flagLabel"
+        android:text="nsfw"
+        android:layout_marginStart="10dp"
+        />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/religiousCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/nsfwCheckbox"
+        app:layout_constraintTop_toBottomOf="@id/flagLabel"
+        android:text="religious"
+        />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/politicalCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/religiousCheckbox"
+        app:layout_constraintTop_toBottomOf="@id/flagLabel"
+        android:text="political"
+        />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/racistCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/politicalCheckbox"
+        app:layout_constraintTop_toBottomOf="@id/flagLabel"
+        android:text="racist"
+        />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/sexistCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/nsfwCheckbox"
+        android:text="sexist"
+        android:layout_marginStart="10dp"
+        />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/explicitCheckbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/sexistCheckbox"
+        app:layout_constraintTop_toBottomOf="@id/religiousCheckbox"
+        android:text="explicit"
+        />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/lineSeparator"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@drawable/horizontal_dotted_line"
+        app:layout_constraintTop_toBottomOf="@id/explicitCheckbox" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/searchForJokeLabel"
+        android:text="Search for a joke that contains this search string"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintTop_toBottomOf="@id/lineSeparator"
+        />
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/searchForJokeEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/searchForJokeLabel"
+        android:layout_marginHorizontal="10dp"
+        />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/searchButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:text="Search"
+        app:layout_constraintTop_toBottomOf="@id/searchForJokeEditText"
+        android:layout_marginTop="10dp"
+        app:cornerRadius="20dp"
+        />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
