--- a/app/src/main/res/layout/fragment_search_result_list.xml
+++ b/app/src/main/res/layout/fragment_search_result_list.xml
@@ -27,6 +27,19 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <androidx.core.widget.ContentLoadingProgressBar
+        android:id="@+id/searchedJokesProgress"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:indeterminateTint="@color/teal_200"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginHorizontal="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/jokeSearchResultList"
         android:name="com.scania.test.presentation.JokeFragment"
@@ -37,7 +50,8 @@
         app:layout_constraintTop_toBottomOf="@id/topAppBarFragmentJokeSearchResult"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layoutManager="LinearLayoutManager"
-        tools:context=".presentation.JokeFragment"
+        android:visibility="gone"
+        tools:context=".presentation.JokeSearchResultFragment"
         tools:listitem="@layout/fragment_search_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
