--- a/app/src/main/res/navigation/home_navigation.xml
+++ b/app/src/main/res/navigation/home_navigation.xml
@@ -3,30 +3,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/home_navigation"
-    app:startDestination="@id/jokeItemFragment">
+    app:startDestination="@id/FavouriteJokesFragment">
 
     <fragment
-        android:id="@+id/jokeItemFragment"
+        android:id="@+id/FavouriteJokesFragment"
         android:name="com.scania.test.presentation.FavouriteJokesFragment"
-        android:label="fragment_item_list"
+        android:label="FavouriteJokesFragment"
         tools:layout="@layout/fragment_favourite_joke_list" >
         <action
-            android:id="@+id/action_jokeItemFragment_to_jokeSearchFragment"
+            android:id="@+id/action_favouriteJokesFragment_to_jokeSearchFragment"
             app:destination="@id/jokeSearchFragment" />
     </fragment>
     <fragment
         android:id="@+id/jokeSearchFragment"
         android:name="com.scania.test.presentation.JokeSearchFragment"
-        android:label="fragment_joke_search"
+        android:label="jokeSearchFragment"
         tools:layout="@layout/fragment_joke_search" >
         <action
-            android:id="@+id/action_jokeSearchFragment_to_jokeFragment"
-            app:destination="@id/jokeFragment" />
+            android:id="@+id/action_jokeSearchFragment_to_jokeSearchResultFragment"
+            app:destination="@id/jokeSearchResultFragment" />
     </fragment>
     <fragment
-        android:id="@+id/jokeFragment"
-        android:name="com.scania.test.presentation.JokeFragment"
-        android:label="fragment_search_result_list"
+        android:id="@+id/jokeSearchResultFragment"
+        android:name="com.scania.test.presentation.JokeSearchResultFragment"
+        android:label="JokeSearchResultFragment"
         tools:layout="@layout/fragment_search_result_list" />
 
 </navigation>
