--- a/app/src/main/res/layout/fragment_search_result_list.xml
+++ b/app/src/main/res/layout/fragment_search_result_list.xml
@@ -40,6 +40,31 @@
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/noJokesImageView"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/sad_face"
+        app:layout_constraintTop_toBottomOf="@id/topAppBarFragmentJokeSearchResult"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
+        />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/noJokesFoundText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ooops.. no jokes found"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/noJokesImageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="18sp"
+        android:layout_marginTop="10dp"
+        android:visibility="gone"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/jokeSearchResultList"
         android:name="com.scania.test.presentation.JokeFragment"
