Handle back navigation stack when there are jokes saved in db

--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -38,6 +38,7 @@
         app:cornerRadius="20dp"
         android:text="Continue"
         android:textAllCaps="false"
+        android:visibility="gone"
         android:drawablePadding="10dp"
         android:drawableEnd="@drawable/double_arrow_right_icon"
         app:layout_constraintStart_toStartOf="parent"
