Added lottie animation for home screen, changed font-style to monospace

--- a/app/src/main/res/layout/fragment_favourite_joke_item.xml
+++ b/app/src/main/res/layout/fragment_favourite_joke_item.xml
@@ -14,6 +14,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Title"
+        android:fontFamily="monospace"
         app:layout_constraintEnd_toStartOf="@id/ic_favourite_img"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,6 +25,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Description"
+        android:fontFamily="monospace"
         app:layout_constraintEnd_toStartOf="@id/ic_favourite_img"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/jokeTitle"
