--- a/app/src/main/res/drawable/ic_favourite_selected.xml
+++ b/app/src/main/res/drawable/ic_favourite_selected.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
   <path
       android:pathData="M16.5,3A5.38,5.38 0,0 0,12 5.57,5.38 5.38,0 0,0 7.5,3 5.8,5.8 0,0 0,2 9c0,8.75 9.22,12.72 9.61,12.88a1,1 0,0 0,0.78 0C12.78,21.76 22,17.79 22,9A5.8,5.8 0,0 0,16.5 3Z"
-      android:fillColor="#000000"/>
+      android:fillColor="@color/teal_200"/>
 </vector>
