--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.HomeScreenFragment">
 
-    <androidx.appcompat.widget.AppCompatImageButton
+    <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/homeScreenImageView"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/jokes_app_icon"
-        android:scaleType="fitCenter"
-        android:background="@android:color/transparent"
+        android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:lottie_loop="false"
+        app:lottie_rawRes="@raw/launcher_animation" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/homeScreenTextView"
@@ -28,23 +28,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:text="Search for your favourite jokes"
         android:textStyle="bold"
+        android:textColor="@color/teal_200"
         android:textSize="18sp"
-        />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/homeScreenContinueButton"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        app:cornerRadius="20dp"
-        android:text="Continue"
-        android:textAllCaps="false"
-        android:visibility="gone"
-        android:drawablePadding="10dp"
-        android:drawableEnd="@drawable/double_arrow_right_icon"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/homeScreenTextView"
+        android:fontFamily="monospace"
         />
 
 
