--- a/app/src/main/res/layout/fragment_joke_search.xml
+++ b/app/src/main/res/layout/fragment_joke_search.xml
@@ -1,10 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable
+            name="toggle"
+            type="com.scania.test.presentation.JokeSearchFragment" />
+    </data>
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.JokeSearchFragment">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -17,13 +24,11 @@
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/navigateBackSearchToolbar"
-            style="@style/Theme.ToolBar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme"
+            android:theme="@style/Theme.ToolBar"
             app:navigationIcon="@drawable/ic_arrow_back"
-            app:title="Joke Search"
-            app:titleTextColor="@color/black" />
+            app:title="Joke Search" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -34,8 +39,9 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:layout_marginStart="10dp"
+        android:fontFamily="monospace"
         app:layout_constraintTop_toBottomOf="@id/topAppBarFragmentSearch"
         />
     <RadioGroup
@@ -52,17 +58,21 @@
         android:id="@+id/categoryAny"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/categoryLabel"
+        android:checked="@={!toggle.customToggle}"
         android:text="Any"/>
 
     <com.google.android.material.radiobutton.MaterialRadioButton
         android:id="@+id/categoryCustom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
         app:layout_constraintStart_toEndOf="@id/categoryAny"
         app:layout_constraintTop_toBottomOf="@id/categoryLabel"
-        android:text="Custom" />
+        android:text="Custom"
+        />
 
     </RadioGroup>
 
@@ -73,15 +83,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/radioGroup"
         android:layout_marginStart="10dp"
+        android:fontFamily="monospace"
         android:text="Programming"
+        android:checked="@{toggle.customToggle}"
+        android:enabled="@{toggle.customToggle}"
         />
 
     <com.google.android.material.checkbox.MaterialCheckBox
         android:id="@+id/miscCheckbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
         app:layout_constraintStart_toEndOf="@id/programmingCheckbox"
         app:layout_constraintTop_toBottomOf="@id/radioGroup"
+        android:enabled="@{toggle.customToggle}"
         android:text="Misc"
         />
 
@@ -89,8 +104,10 @@
         android:id="@+id/darkCheckbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
         app:layout_constraintStart_toEndOf="@id/miscCheckbox"
         app:layout_constraintTop_toBottomOf="@id/radioGroup"
+        android:enabled="@{toggle.customToggle}"
         android:text="Dark"
         />
 
@@ -98,8 +115,10 @@
         android:id="@+id/punCheckbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
         app:layout_constraintStart_toEndOf="@id/darkCheckbox"
         app:layout_constraintTop_toBottomOf="@id/radioGroup"
+        android:enabled="@{toggle.customToggle}"
         android:text="Pun"
         />
 
@@ -107,8 +126,10 @@
         android:id="@+id/spookyCheckbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
         app:layout_constraintStart_toEndOf="@id/punCheckbox"
         app:layout_constraintTop_toBottomOf="@id/radioGroup"
+        android:enabled="@{toggle.customToggle}"
         android:text="Spooky"
         />
 
@@ -116,9 +137,11 @@
         android:id="@+id/christmasCheckbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/programmingCheckbox"
         android:layout_marginStart="10dp"
+        android:enabled="@{toggle.customToggle}"
         android:text="Christmas"
         />
 
@@ -134,9 +157,10 @@
         android:text="Select language"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
         app:layout_constraintStart_toStartOf="parent"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         app:layout_constraintTop_toBottomOf="@id/lineSeparator1"
@@ -147,6 +171,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:fontFamily="monospace"
         app:layout_constraintStart_toEndOf="@id/languageLabel"
         app:layout_constraintTop_toTopOf="@id/languageLabel"
         android:entries="@array/language_option"
@@ -169,7 +194,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:fontFamily="monospace"
+        android:textSize="16sp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/lineSeparator2"
@@ -182,6 +208,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/flagLabel"
         android:text="nsfw"
+        android:fontFamily="monospace"
         android:layout_marginStart="10dp"
         />
 
@@ -189,6 +216,7 @@
         android:id="@+id/religiousCheckbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
         app:layout_constraintStart_toEndOf="@id/nsfwCheckbox"
         app:layout_constraintTop_toBottomOf="@id/flagLabel"
         android:text="religious"
@@ -198,6 +226,7 @@
         android:id="@+id/politicalCheckbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
         app:layout_constraintStart_toEndOf="@id/religiousCheckbox"
         app:layout_constraintTop_toBottomOf="@id/flagLabel"
         android:text="political"
@@ -207,6 +236,7 @@
         android:id="@+id/racistCheckbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
         app:layout_constraintStart_toEndOf="@id/politicalCheckbox"
         app:layout_constraintTop_toBottomOf="@id/flagLabel"
         android:text="racist"
@@ -216,6 +246,7 @@
         android:id="@+id/sexistCheckbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/nsfwCheckbox"
         android:text="sexist"
@@ -226,6 +257,7 @@
         android:id="@+id/explicitCheckbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
         app:layout_constraintStart_toEndOf="@id/sexistCheckbox"
         app:layout_constraintTop_toBottomOf="@id/religiousCheckbox"
         android:text="explicit"
@@ -245,9 +277,10 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         android:textStyle="bold"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
+        android:fontFamily="monospace"
         app:layout_constraintTop_toBottomOf="@id/lineSeparator"
         />
     <com.google.android.material.textfield.TextInputEditText
@@ -258,6 +291,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/searchForJokeLabel"
         android:layout_marginHorizontal="10dp"
+        android:fontFamily="monospace"
         />
 
     <com.google.android.material.button.MaterialButton
@@ -266,6 +300,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:text="Search"
+        android:fontFamily="monospace"
         app:layout_constraintTop_toBottomOf="@id/searchForJokeEditText"
         android:layout_marginTop="10dp"
         app:cornerRadius="20dp"
@@ -273,3 +308,5 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
