--- a/app/src/main/res/layout/fragment_search_item.xml
+++ b/app/src/main/res/layout/fragment_search_item.xml
@@ -16,6 +16,7 @@
         android:text="Title"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:fontFamily="monospace"
         app:layout_constraintEnd_toStartOf="@id/ic_favourite_img"
         android:textAppearance="?attr/textAppearanceListItem" />
 
@@ -24,6 +25,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Description"
+        android:fontFamily="monospace"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/jokeLine1"
         app:layout_constraintEnd_toStartOf="@id/ic_favourite_img"
