--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,9 +14,10 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.ToolBar" parent="Widget.MaterialComponents.Toolbar.Primary">
+    <style name="Theme.ToolBar" parent="Widget.MaterialComponents.ActionBar.Surface">
         <item name="android:background">@color/white</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/teal_200</item>
+        <item name="android:fontFamily">monospace</item>
     </style>
 
 </resources>
